--- a/src/assets/scss/argon-dashboard/custom/navbars/_navbar-vertical.scss
+++ b/src/assets/scss/argon-dashboard/custom/navbars/_navbar-vertical.scss
@@ -32,7 +32,8 @@
     .navbar-brand-img,
     .navbar-brand > img {
         max-width: 100%;
-        max-height: 2rem;
+        max-height: 4.5rem;
+        margin-bottom: 10px;
     }
 
 
